deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: stories-django-mini
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stories-django-mini
  template:
    metadata:
      labels:
        app: stories-django-mini
    spec:
      containers:
        - name: stories-django-mini-container
          imagePullPolicy: IfNotPresent
          image: stories_django_image:latest
          command: ["./manage.py", "runserver", "0.0.0.0:8000"]
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          readinessProbe:
            # an http probe
            httpGet:
              path: /readiness
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: postgres-volume-mount
              mountPath: /var/lib/busybox

      volumes:
        - name: postgres-volume-mount
          persistentVolumeClaim:
            claimName: postgres-pvc
