service.yml
kind: Service
apiVersion: v1
metadata:
  name: kubernetes-django-service
spec:
  selector:
    app: stories-django-mini
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
